tests/typing/bad/testfile-variance-9.scala

class List[T] {}
class A[+T] { def foo(x: List[T]){} }
object Main { def main(args: Array[String]) { } }
